--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,135 @@
 	--blue: hsl(223, 87%, 63%);
 	--pale-blue: hsl(223, 100%, 88%);
 	--very-blue: hsl(209, 33%, 12%);
+	--very-dark-blue: hsl(209, 33%, 12%);
 	--light-red: hsl(354, 100%, 66%);
 	--gray: hsl(0, 0%, 59%);
+	--white: #f9f9f9;
+}
+
+.body {
+	font-family: var(--font);
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+.footer {
+	margin-bottom: 1rem;
+	text-align: center;
+}
+
+.main {
+	width: min(80vw, 1000px);
+	margin: 5rem auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 3rem;
+}
+
+.subtitle {
+	font-size: 2rem;
+	font-weight: 700;
+}
+
+.subtitle--color {
+	color: var(--gray);
+	font-weight: 300;
+}
+
+.container__email {
+	display: flex;
+	flex-direction: column;
+	gap: .8rem;
+	width: 100%;
+	position: relative;
+}
+
+.box {
+	border-radius: 30px;
+	padding: 1.2rem;
+}
+
+.input__email {
+	border: 1px solid var(--gray);
+	font-size: 1rem;
+	color: var(--gray);
+}
+
+.email__error {
+	position: absolute;
+	padding: 1rem;
+	background-color: var(--white);
+	border-radius: 0 8px 8px 8px;
+	bottom: -100%;
+	left: 2rem;
+	color: var(--very-dark-blue);
+}
+
+.email__error::after {
+	content: "";
+	display: block;
+	width: 20px;
+	height: 20px;
+	background-color: var(--white);
+	position: absolute;
+	top: -5px;
+	left: 10px;
+	transform: rotate(45deg);
+	z-index: -1;
+}
+
+.btn {
+	color: #fff;
+	font-size: 1rem;
+	font-weight: 600;
+	background-color: var(--blue);
+	box-shadow: 0px 0px 5px var(--pale-blue);
+}
+
+.img {
+	width: 100%;
+}
+
+.social__medias {
+	display: flex;
+	column-gap: 1rem;
+	margin-top: 5rem;
+}
+
+.icons {
+	padding: .7rem;
+	border-radius: 50%;
+	box-shadow: 0 0 1px var(--gray);
+	color: var(--blue);
+}
+
+.copyright {
+	color: var(--gray);
+}
+
+.hidden {
+	display: none;
+}
+
+
+@media screen and (min-width: 1024px) {
+	.container__email {
+		flex-direction: row;
+	}
+
+	.input__email {
+		flex-grow: 2;
+	}
+
+	.btn {
+		flex-grow: 1;
+	}
+
+	.icons:hover {
+		background-color: var(--blue);
+		color: #fff;
+	}
 }
