--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 	--very-dark-blue: hsl(209, 33%, 12%);
 	--light-red: hsl(354, 100%, 66%);
 	--gray: hsl(0, 0%, 59%);
-	--white: #f9f9f9;
+	--white: #f5f5f5;
 }
 
 .body {
@@ -67,8 +67,8 @@
 	position: absolute;
 	padding: 1rem;
 	background-color: var(--white);
-	border-radius: 0 8px 8px 8px;
-	bottom: -100%;
+	border-radius: 8px;
+	top: -65px;
 	left: 2rem;
 	color: var(--very-dark-blue);
 }
@@ -80,7 +80,7 @@
 	height: 20px;
 	background-color: var(--white);
 	position: absolute;
-	top: -5px;
+	bottom: -5px;
 	left: 10px;
 	transform: rotate(45deg);
 	z-index: -1;
@@ -136,5 +136,13 @@
 	.icons:hover {
 		background-color: var(--blue);
 		color: #fff;
+	}
+
+	.email__error {
+		top: 70px;
+	}
+
+	.email__error::after {
+		top: -5px;
 	}
 }
